--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,7 +16,7 @@ dependencies = [
     "google-cloud-tasks==2.20.0",
     "orjson==3.11.4",
     "orso==0.0.226",
-    "opteryx==0.26.2b1974",
+    "opteryx-core==0.1.1b12",
     "pyarrow==22.0.0",
     "pyiceberg==0.10.0",
     "pyiceberg-firestore-gcs==0.1.2",
