--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ build-backend = "setuptools.build_meta"
 name = "opteryx-data"
 version = "0.0.0"
 description = "Opteryx Data Service"
-requires-python = ">=3.11"
+requires-python = "==3.13"
 dependencies = [
     "cryptography==46.0.3",
     "fastapi==0.123.9",
