--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,10 +16,10 @@ dependencies = [
     "google-cloud-tasks==2.20.0",
     "orjson==3.11.5",
     "orso==0.0.226",
-    "opteryx-core==0.2.0b52",
+    "opteryx-core==0.2.0b53",
     "pyarrow==22.0.0",
     "pyiceberg==0.10.0",
-    "pyiceberg-firestore-gcs==0.2.0",
+    "pyiceberg-firestore-gcs==0.2.*",
     "python-jose[cryptography]==3.5.0",
     "python-multipart==0.0.20",
     "requests==2.32.5",
