--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ dependencies = [
     "google-cloud-secret-manager==2.25.0",
     "google-cloud-storage==3.7.0",
     "google-cloud-tasks==2.20.0",
+    "minio==7.2.20",
     "orjson==3.11.5",
     "orso==0.0.226",
     "opteryx-core==0.3.0b89",
