--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,10 +17,10 @@ dependencies = [
     "minio==7.2.20",
     "orjson==3.11.5",
     "orso==0.0.226",
-    "opteryx-core==0.3.0b90",
+    "opteryx_catalog==0.3.*",
+    "opteryx-core==0.4.*",
     "pyarrow==22.0.0",
     "pyiceberg==0.10.0",
-    "pyiceberg-firestore-gcs==0.3.0",
     "python-jose[cryptography]==3.5.0",
     "python-multipart==0.0.20",
     "requests==2.32.5",
