--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,8 +17,8 @@ dependencies = [
     "minio==7.2.20",
     "orjson==3.11.5",
     "orso==0.0.226",
-    "opteryx_catalog==0.3.*",
-    "opteryx-core==0.4.*",
+    "opteryx-catalog==0.4.*",
+    "opteryx-core==0.5.*",
     "pyarrow==22.0.0",
     "python-jose[cryptography]==3.5.0",
     "python-multipart==0.0.20",
