--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,8 +23,7 @@ dependencies = [
     "python-jose[cryptography]==3.5.0",
     "python-multipart==0.0.20",
     "requests==2.32.5",
-    "uvicorn[standard]==0.38.0",
-    "zstandard==0.25.0",
+    "uvicorn[standard]==0.38.0"
 ]
 
 [tool.isort]
