--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ build-backend = "setuptools.build_meta"
 name = "opteryx-worker"
 version = "0.0.57"
 description = "Opteryx Execution Worker"
-requires-python = ">=3.14"
+requires-python = ">=3.13"
 dependencies = [
     "cryptography==46.0.5",
     "fastapi==0.129.0",
@@ -16,6 +16,7 @@ dependencies = [
     "google-cloud-tasks==2.21.0",
     "minio==7.2.20",
     "orso==0.0.239",
+    "orjson",
     "opteryx-catalog==0.4.*",
     "opteryx-core==0.6.*",
     "pyarrow==23.0.0",
