--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,7 +16,7 @@ dependencies = [
     "google-cloud-tasks==2.21.0",
     "minio==7.2.20",
     "orso==0.0.239",
-    "orjson",
+    "orjson==3.11.7",
     "opteryx-catalog==0.4.*",
     "opteryx-core==0.6.*",
     "pyarrow==23.0.0",
